@@ -170,7 +170,8 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc9286.suite',
      'tests.test_rfc9289.suite',
      'tests.test_rfc9323.suite',
-     'tests.test_rfc9336.suite']
+     'tests.test_rfc9336.suite',
+     'tests.test_rfc9337.suite']
 )
 
 
