@@ -11,6 +11,7 @@ Revision 0.4.2, released XX-XX-2022
 - Modified RFC9286 to apply https://www.rfc-editor.org/errata/eid7118
 - Added RFC9323 providing RPKI Signed Checklist (RSC)
 - Added RFC9336 providing Extended Key Usage (EKU) for Document Signing
+- Added RFC9337 providing GOST Algorithms with PKCS#5
 
 Revision 0.4.1, released 16-02-2022
 -----------------------------------
